# pdf2text

./: .env.example  .pre-commit-config.yaml  README.md  Taskfile.yml  agent.py  main.py  main_pdfplumber.py  pyproject.toml  requirements.dev.txt  requirements.txt
pdf2text/: hosting.py
pdf2text/common/: form_recognizer_parse.py  log_utils.py
pdf2text/models/: driver.py  llm_response.py
pdf2text/protocols/: i_azure_form_recognizer.py  i_azure_openai_service.py  i_openai_content_evaluator.py
pdf2text/services/: azure_form_recognizer.py  azure_openai_service.py  openai_content_evaluator.py
test_data/: sources.md
tests/pdf2text/common/: test_form_recognizer_parse.py  test_log_utils.py
tests/pdf2text/common/data/: form_recognizer_doc.json
tests/pdf2text/models/: test_driver.py  test_llm_response.py
tests/pdf2text/services/: test_azure_form_recognizer.py  test_azure_openai_service.py  test_openai_content_evaluator.py
